--- a/css/news.css
+++ b/css/news.css
@@ -99,7 +99,7 @@ header {
 }
 
 .logo img {
-    width: 100%;
+    width: 150px;
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -120,8 +120,9 @@ nav.desktop {
 }
 
 nav.desktop ul {
+    padding-top: 15px;
     list-style-type: none;
-}
+  }
 
 nav.desktop ul li {
     float: left;
@@ -262,7 +263,15 @@ footer {
 }
 
 .logo-footer {
-    text-align: center;
+    width: 200px;
+    height: 200px;
+    margin: auto;
+}
+
+.logo-footer img {
+    width: 100%;
+    padding-top: 5em;
+    background-position: center;
 }
 
 @media screen and (max-width: 950px) {
