--- a/css/contact.css
+++ b/css/contact.css
@@ -1,339 +1,358 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
 .content {
-    max-width: 1230px;
-    width: 100%;
-    margin: auto;
+  max-width: 1230px;
+  width: 100%;
+  margin: auto;
 }
 
 .clear {
-    clear: both;
+  clear: both;
 }
 
 header {
-    width: 100%;
-    padding: 10px;
-    background-color: #1f4f37;
-    position: fixed;
-    top: 0;
-    z-index: 999;
-  }
+  width: 100%;
+  padding: 10px;
+  background-color: #1f4f37;
+  position: fixed;
+  top: 0;
+  z-index: 999;
+}
 
 .list-mobile {
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    right: 0;
-    top: 0;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: none;
 }
 
 .list-mobile i {
-    z-index: 1;
-    transition: 1s;
-    padding: 10px;
-    display: none;
-    float: right;
-    position: relative;
-    text-align: center;
-    top: -2px;
-    right: 20px;
-    font-size: 30px;
+  z-index: 1;
+  transition: 1s;
+  padding: 10px;
+  display: none;
+  float: right;
+  position: relative;
+  text-align: center;
+  top: -2px;
+  right: 20px;
+  font-size: 30px;
 }
 
 .logo {
-    color: white;
-    float: left;
+  color: white;
+  float: left;
 }
 
 .logo img {
-    width: 150px;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-}  
+  width: 150px;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 
 nav.desktop {
-    float: right;
+  float: right;
 }
 
 nav.desktop ul {
-    padding-top: 15px;
-    list-style-type: none;
-  }
+  padding-top: 15px;
+  list-style-type: none;
+}
 
 nav.desktop ul li {
-    float: left;
-    padding: 8px 10px 0px 10px;
-    transition: 0.5s;
-    height: 100%;
-    outline: none;
-    border: 0;
-    font-size: 20px;
+  float: left;
+  padding: 8px 10px 0px 10px;
+  transition: 0.5s;
+  height: 100%;
+  outline: none;
+  border: 0;
+  font-size: 20px;
 }
 
 nav.desktop ul li:hover {
-    border-bottom: 3px solid black;
-    padding-top: 5px;
+  border-bottom: 3px solid black;
+  padding-top: 5px;
 }
 
 nav.desktop ul li a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 nav.mobile {
-    transition: 1s;
-    opacity: 0;
-    position: absolute;
-    left: 0px;
-    top: 57px;
-    width: 100%;
-    height: 100%;
-    background-color: #0d7c44;
-    z-index: 999;
-    text-align: center;
+  transition: 1s;
+  display: none;
+  position: absolute;
+  left: 0px;
+  top: 57px;
+  width: 100%;
+  background-color: #0d7c44;
+  z-index: 999;
+  text-align: center;
 }
 
 nav.mobile ul {
-    padding-top: 200px;
-    list-style-type: none;
+  list-style-type: none;
 }
 
 nav.mobile ul li {
-    padding: 10px 0px;
-    font-size: 30px;
+  padding: 10px 0px;
+  font-size: 30px;
 }
 
 nav.mobile ul li:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-    border: 1px solid black;
+  background-color: rgba(0, 0, 0, 0.1);
+  border: 1px solid black;
 }
 
 nav.desktop ul li:nth-child(6) a,
 nav.mobile ul li:nth-child(6) a {
-    color: aqua;
+  color: aqua;
 }
 
 nav.mobile ul li a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .logo h1 a {
-    font-size: 30px;
-    color: white;
-    text-decoration: none;
+  font-size: 30px;
+  color: white;
+  text-decoration: none;
 }
 
 .contact {
-    margin: 50px 0px;
+  margin: 50px 0px;
 }
 
 .contact-title {
-    text-align: center;
+  text-align: center;
 }
 
 .contact-wraper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .contact-locali {
-    width: 100%;
-    text-align: center;
+  width: 100%;
+  text-align: center;
 }
 
 .contact-locali nav ul {
-    padding: 10px 0px;
+  padding: 10px 0px;
 }
 
 .contact-locali nav ul li {
-    list-style: none;
-    font-size: 20px;
+  list-style: none;
+  font-size: 20px;
 }
 
 .contact-locali-img {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    margin: 30px 0px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  margin: 30px 0px;
 }
 
 .contact-locali-img img {
-    width: 50%;
-    height: 100%;
+  width: 50%;
+  height: 100%;
 }
 
 footer {
-    width: 100%;
-    background-color: #1F4F37;
-    display: flex;
-    margin-top: 26px;
-    color: white;
+  width: 100%;
+  background-color: #1f4f37;
+  display: flex;
+  margin-top: 26px;
+  color: white;
+  position: relative;
 }
 
 .footer-singles {
-    width: 35%;
-    padding: 10px 30px;
+  width: 35%;
+  padding: 10px 30px;
 }
 
 .locali-footer h1 {
-    font-size: 30px;
-    padding: 10px 0px;
+  font-size: 30px;
+  padding: 10px 0px;
 }
 
 .locali-footer p {
-    font-size: 18px;
-    text-align: left;
+  font-size: 18px;
+  text-align: left;
 }
 
 .locali-footer p:nth-child(3) {
-    padding: 10px 0px;
+  padding: 10px 0px;
 }
 
 .locali-footer p:nth-child(5) {
-    padding-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .locali-footer a {
-    color: white;
+  color: white;
 }
 
 .infor-footer {
-    padding: 10px;
+  padding: 10px;
 }
 
 .infor-footer h1 {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 .infor-footer a {
-    display: block;
-    color: white;
+  display: block;
+  color: white;
 }
 
 .infor-footer span {
-    padding-top: 20px 0px;
+  padding-top: 20px 0px;
 }
 
 .infor-footer .traco {
-    width: 100%;
-    height: 2px;
-    background-color: gray;
-    margin: 20px 0px;
+  width: 100%;
+  height: 2px;
+  background-color: gray;
+  margin: 20px 0px;
 }
 
 .infor-footer a {
-    padding: 5px 0px;
-    color: white;
+  padding: 5px 0px;
+  color: white;
 }
 
 .logo-footer {
-    width: 200px;
-    height: 200px;
-    margin: auto;
+  width: 200px;
+  height: 200px;
+  margin: auto;
 }
 
 .logo-footer img {
-    width: 100%;
-    padding-top: 5em;
-    background-position: center;
+  width: 100%;
+  padding-top: 5em;
+  background-position: center;
 }
 
+.versionEn {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  z-index: 999;
+  background-color: rgb(0, 195, 255);
+  text-align: center;
+  border-radius: 50px;
+}
+
+.versionEn i {
+  padding-top: 17px;
+}
+
+
 @media screen and (max-width: 950px) {
-    .logo {
-        float: none;
-        text-align: center;
-    }
+  .logo {
+    float: none;
+    text-align: center;
+  }
 
-    nav.desktop {
-        display: none;
-    }
+  nav.desktop {
+    display: none;
+  }
 
-    .list-mobile i {
-        display: block;
-        display: inline-block;
-    }
+  .list-mobile {
+    display: block;
+  }
 
-    footer {
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-    }
+  .list-mobile i {
+    display: block;
+    display: inline-block;
+  }
 
-    .footer-singles {
-        width: 50%;
-        padding: 0px;
-    }
+  footer {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
 
-    .infor-footer h1 {
-        padding: 0;
-    }
+  .footer-singles {
+    width: 50%;
+    padding: 0px;
+  }
+
+  .infor-footer h1 {
+    padding: 0;
+  }
 }
 
 @media screen and (max-width: 770px) {
-    nav.mobile {
-        width: 100%;
-        padding: 10px;
-        height: 100vmax;
-        top: 58px;
-    }
+  nav.mobile {
+    width: 100%;
+    padding: 10px;
+    top: 58px;
+  }
 
-    .contact-locali-img {
-        flex-direction: column;
-    }
+  .contact-locali-img {
+    flex-direction: column;
+  }
 
-    .contact-locali-img img {
-        margin: auto;
-        background-position: center;
-        margin-top: 20px;
-        width: 100%;
-    } 
+  .contact-locali-img img {
+    margin: auto;
+    background-position: center;
+    margin-top: 20px;
+    width: 100%;
+  }
 
-    footer {
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-    }
+  footer {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
 
-    .footer-singles {
-        width: 50%;
-        padding: 0px;
-    }
+  .footer-singles {
+    width: 50%;
+    padding: 0px;
+  }
 
-    .locali-footer {
-        padding: 0px;
-    }
+  .locali-footer {
+    padding: 0px;
+  }
 }
 
 @media screen and (max-width: 500px) {
+  footer {
+    flex-direction: column;
+  }
 
-    footer {
-        flex-direction: column;
-    }
+  .footer-singles {
+    width: 90%;
+    margin: 10px 0px;
+    padding: 0px;
+    text-align: justify;
+  }
 
-    .footer-singles {
-        width: 90%;
-        margin: 10px 0px;
-        padding: 0px;
-        text-align: justify;
-    }
-
-    .infor-footer {
-        padding: 0px;
-    }
+  .infor-footer {
+    padding: 0px;
+  }
 }
