--- a/css/members.css
+++ b/css/members.css
@@ -78,6 +78,7 @@ header {
 .list-mobile {
   width: 100px;
   height: 100px;
+  display: none;
   position: absolute;
   right: 0;
   top: 0;
@@ -137,25 +138,18 @@ nav.desktop ul li a {
   text-decoration: none;
 }
 
-nav.desktop ul li:nth-child(2) a {
-  color: aqua;
-}
-
 nav.mobile {
   transition: 1s;
-  opacity: 0;
+  display: none;
   position: absolute;
   left: 0px;
-  top: 57px;
   width: 100%;
-  height: 100%;
   background-color: #0d7c44;
   z-index: 999;
   text-align: center;
 }
 
 nav.mobile ul {
-  padding-top: 200px;
   list-style-type: none;
 }
 
@@ -169,8 +163,8 @@ nav.mobile ul li:hover {
   border: 1px solid black;
 }
 
-nav.desktop ul li:nth-child(2) a,
-nav.mobile ul li:nth-child(2) a {
+nav.desktop ul li:nth-child(5) a,
+nav.mobile ul li:nth-child(5) a {
   color: aqua;
 }
 
@@ -201,7 +195,6 @@ nav.mobile ul li a {
 .postdocs {
   margin: 10px auto;
   width: 100%;
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
 }
@@ -213,7 +206,7 @@ nav.mobile ul li a {
 
 .single-post {
   width: 90%;
-  background-color: red;
+  background-color: rgba(239, 240, 240, 0.923);
   padding: 0.5em;
   margin: 10px auto;
   display: flex;
@@ -251,7 +244,6 @@ nav.mobile ul li a {
 .phd {
   margin: 10px auto;
   width: 100%;
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
 }
@@ -259,7 +251,6 @@ nav.mobile ul li a {
 .students {
   margin: 10px auto;
   width: 100%;
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
 }
@@ -267,7 +258,6 @@ nav.mobile ul li a {
 .bcsStuden {
   margin: 10px auto;
   width: 100%;
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
 }
@@ -278,6 +268,7 @@ footer {
   display: flex;
   margin: auto;
   color: white;
+  position: relative;
 }
 
 .footer-singles {
@@ -348,6 +339,23 @@ footer {
   background-position: center;
 }
 
+.versionEn {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  z-index: 999;
+  background-color: rgb(0, 195, 255);
+  text-align: center;
+  border-radius: 50px;
+}
+
+.versionEn i {
+  padding-top: 17px;
+}
+
+
 @media screen and (max-width: 950px) {
   .logo {
     float: none;
@@ -355,6 +363,10 @@ footer {
   }
 
   nav.desktop {
+    display: none;
+  }
+
+  .list-mobile {
     display: none;
   }
 
@@ -385,7 +397,6 @@ footer {
   nav.mobile {
     width: 100%;
     padding: 10px;
-    height: 200px;
     top: 58px;
   }
 
