--- a/css/news.css
+++ b/css/news.css
@@ -78,6 +78,7 @@ header {
     position: absolute;
     right: 0;
     top: 0;
+    display: none;
 }
 
 .list-mobile i {
@@ -144,10 +145,6 @@ nav.desktop ul li a {
     text-decoration: none;
 }
 
-nav.desktop ul li:nth-child(4) a {
-    color: aqua;
-}
-
 nav.mobile {
     transition: 1s;
     opacity: 0;
@@ -176,8 +173,8 @@ nav.mobile ul li:hover {
     border: 1px solid black;
 }
 
-nav.desktop ul li:nth-child(4) a,
-nav.mobile ul li:nth-child(4) a {
+nav.desktop ul li:nth-child(3) a,
+nav.mobile ul li:nth-child(3) a {
     color: aqua;
 }
 nav.mobile ul li a {
@@ -204,6 +201,7 @@ footer {
     display: flex;
     margin: auto;
     color: white;
+    position: relative;
 }
 
 .footer-singles {
@@ -274,6 +272,23 @@ footer {
     background-position: center;
 }
 
+.versionEn {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+    z-index: 999;
+    background-color: rgb(0, 195, 255);
+    text-align: center;
+    border-radius: 50px;
+  }
+  
+  .versionEn i {
+    padding-top: 17px;
+  }
+  
+
 @media screen and (max-width: 950px) {
     .logo {
         float: none;
@@ -282,6 +297,10 @@ footer {
 
     nav.desktop {
         display: none;
+    }
+
+    .list-mobile {
+        display: block;
     }
 
     .list-mobile i {
