--- a/css/publications.css
+++ b/css/publications.css
@@ -91,19 +91,16 @@ nav.desktop ul li a {
 
 nav.mobile {
   transition: 1s;
-  opacity: 0;
+  display: none;
   position: absolute;
   left: 0px;
-  top: 57px;
   width: 100%;
-  height: 100%;
   background-color: #0d7c44;
   z-index: 999;
   text-align: center;
 }
 
 nav.mobile ul {
-  padding-top: 200px;
   list-style-type: none;
 }
 
@@ -117,8 +114,8 @@ nav.mobile ul li:hover {
   border: 1px solid black;
 }
 
-nav.desktop ul li:nth-child(3) a,
-nav.mobile ul li:nth-child(3) a {
+nav.desktop ul li:nth-child(2) a,
+nav.mobile ul li:nth-child(2) a {
   color: aqua;
 }
 
@@ -129,6 +126,7 @@ nav.mobile ul li a {
 
 .publications {
   width: 100%;
+  margin: 6em auto;
 }
 
 .title-publications {
@@ -170,6 +168,7 @@ footer {
   display: flex;
   margin: auto;
   color: white;
+  position: relative;
 }
 
 .footer-singles {
@@ -240,6 +239,23 @@ footer {
     background-position: center;
 }
 
+.versionEn {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  z-index: 999;
+  background-color: rgb(0, 195, 255);
+  text-align: center;
+  border-radius: 50px;
+}
+
+.versionEn i {
+  padding-top: 17px;
+}
+
+
 @media screen and (max-width: 950px) {
   .logo {
     float: none;
@@ -248,6 +264,10 @@ footer {
 
   nav.desktop {
     display: none;
+  }
+
+  .list-mobile {
+    display: block;
   }
 
   .list-mobile i {
@@ -277,7 +297,6 @@ footer {
   nav.mobile {
     width: 100%;
     padding: 10px;
-    height: 200px;
     top: 58px;
   }
 
