--- a/css/research.css
+++ b/css/research.css
@@ -34,6 +34,7 @@ header {
   position: absolute;
   right: 0;
   top: 0;
+  display: none;
 }
 
 .list-mobile i {
@@ -102,19 +103,16 @@ nav.desktop ul li a {
 
 nav.mobile {
   transition: 1s;
-  opacity: 0;
+  display: none;
   position: absolute;
   left: 0px;
-  top: 57px;
   width: 100%;
-  height: 100%;
   background-color: #0d7c44;
   z-index: 999;
   text-align: center;
 }
 
 nav.mobile ul {
-  padding-top: 200px;
   list-style-type: none;
 }
 
@@ -192,6 +190,7 @@ footer {
   display: flex;
   margin: auto;
   color: white;
+  position: relative;
 }
 
 .footer-singles {
@@ -266,6 +265,23 @@ footer {
   background-position: center;
 }
 
+.versionEn {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  z-index: 999;
+  background-color: rgb(0, 195, 255);
+  text-align: center;
+  border-radius: 50px;
+}
+
+.versionEn i {
+  padding-top: 17px;
+}
+
+
 @media screen and (max-width: 950px) {
   .logo {
     float: none;
@@ -274,6 +290,10 @@ footer {
 
   nav.desktop {
     display: none;
+  }
+
+  .list-mobile {
+    display: block;
   }
 
   .list-mobile i {
@@ -300,6 +320,19 @@ footer {
 }
 
 @media screen and (max-width: 800px) {
+
+  nav.mobile {
+    transition: 1s;
+    display: none;
+    position: absolute;
+    left: 0px;
+    width: 100%;
+    background-color: #0d7c44;
+    z-index: 999;
+    text-align: center;
+  }  
+
+  /* footer */
   .research-single {
     width: 100%;
     display: flex;
@@ -338,7 +371,6 @@ footer {
   nav.mobile {
     width: 100%;
     padding: 10px;
-    height: 200px;
     top: 58px;
   }
 
