--- a/css/contact.css
+++ b/css/contact.css
@@ -145,6 +145,8 @@ nav.mobile ul li a {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-content: center;
+  align-items: center;
 }
 
 .contact-locali {
@@ -165,12 +167,19 @@ nav.mobile ul li a {
   width: 100%;
   display: flex;
   flex-direction: row;
-  margin: 30px 0px;
+  margin: 30px auto;
+  justify-content: center;
+  align-items: center;
 }
 
 .contact-locali-img img {
   width: 50%;
   height: 100%;
+}
+
+.img.locali {
+  margin: auto;
+  text-align: center;
 }
 
 footer {
