--- a/css/members.css
+++ b/css/members.css
@@ -97,6 +97,21 @@ header {
   font-size: 30px;
 }
 
+.versionEn {
+  width: 50px;
+  height: 50px;
+  z-index: 999;
+  background-color: rgb(0, 195, 255);
+  text-align: center;
+  border-radius: 50px;
+  float: left;
+  margin-right: 3.4em;
+}
+
+.versionEn i {
+  padding-top: 17px;
+}
+
 .logo {
   color: white;
   float: left;
@@ -338,23 +353,6 @@ footer {
   padding-top: 5em;
   background-position: center;
 }
-
-.versionEn {
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  right: 5px;
-  bottom: 5px;
-  z-index: 999;
-  background-color: rgb(0, 195, 255);
-  text-align: center;
-  border-radius: 50px;
-}
-
-.versionEn i {
-  padding-top: 17px;
-}
-
 
 @media screen and (max-width: 950px) {
   .logo {
