--- a/css/home.css
+++ b/css/home.css
@@ -51,18 +51,13 @@ header {
 }
 
 .versionEn {
-  width: 50px;
-  height: 50px;
   z-index: 999;
-  background-color: rgb(0, 195, 255);
-  text-align: center;
+  /* background-color: rgb(0, 195, 255); */
+  display: inline-block;
   border-radius: 50px;
-  float: left;
   margin-right: 3.4em;
-}
-
-.versionEn i {
-  padding-top: 17px;
+  margin-top: 5.5em;
+  color: black;
 }
 
 .logo {
@@ -143,7 +138,7 @@ nav.mobile ul li a {
   width: 100%;
   display: flex;
   justify-content: center;
-  margin: 120px auto;
+  margin: auto;
 }
 
 .prof-members {
