--- a/css/publications.css
+++ b/css/publications.css
@@ -49,18 +49,13 @@ header {
 }
 
 .versionEn {
-  width: 50px;
-  height: 50px;
   z-index: 999;
-  background-color: rgb(0, 195, 255);
-  text-align: center;
+  /* background-color: rgb(0, 195, 255); */
+  display: inline-block;
   border-radius: 50px;
-  float: left;
   margin-right: 3.4em;
-}
-
-.versionEn i {
-  padding-top: 17px;
+  margin-top: 5.5em;
+  color: black;
 }
 
 .logo {
