--- a/css/research.css
+++ b/css/research.css
@@ -150,7 +150,7 @@ nav.mobile ul li a {
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin: 50px auto;
+  margin: auto;
 }
 
 .research-single {
